--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.3",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "formik": "^2.1.4",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -20,11 +24,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node .\\server\\server.js"
+    "server": "node .\\server\\server.js",
+    "lint": "./node_modules/.bin/eslint src/**/*.js*",
+    "lint:fix": "./node_modules/.bin/eslint --fix src/**/*.js*"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": [
+    "serviceWorker.js"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,7 +47,18 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "express": "^4.17.1",
+    "prettier": "^2.0.5"
   }
 }
